--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       ::-webkit-scrollbar-track { background: rgba(0,0,0,0.1); }
       ::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.2); border-radius: 3px; }
       ::-webkit-scrollbar-thumb:hover { background: rgba(255,255,255,0.4); }
+      
+      /* Hide default cursor for custom implementation */
+      body, a, button, input, textarea {
+        cursor: none !important;
+      }
     </style>
   <script type="importmap">
 {
@@ -24,6 +29,8 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "@react-three/drei": "https://aistudiocdn.com/@react-three/drei@^10.7.7",
     "@react-three/fiber": "https://aistudiocdn.com/@react-three/fiber@^9.4.0",
+    "@react-three/rapier": "https://aistudiocdn.com/@react-three/rapier@^2.2.0",
+    "@react-three/postprocessing": "https://aistudiocdn.com/@react-three/postprocessing@^3.0.4",
     "vite": "https://aistudiocdn.com/vite@^7.2.4",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
